--- a/Views/Cart/Index2.cshtml
+++ b/Views/Cart/Index2.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewBag.Title = "Index2";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    <link rel="stylesheet" type="text/css" href="~/Content/SanPham.css" />
 }
 <head>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/Cart.css" />
 </head>
 <style>
     .shoppingcart {
