--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Giỏ hàng";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    <link rel="stylesheet" type="text/css" href="~/Content/SanPham.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/Cart.css" />
 }
 
 <script language="JavaScript">
