--- a/Views/Home/ProductDetails.cshtml
+++ b/Views/Home/ProductDetails.cshtml
@@ -1,8 +1,8 @@
-﻿@model TrangwebCellPhoneS.Models.ViewModel.ProductDetailsVM
+﻿﻿@model TrangwebCellPhoneS.Models.ViewModel.ProductDetailsVM
 @{
     ViewBag.Title = Model.product.ProductName;
     Layout = "~/Views/Shared/_Layout.cshtml";
-    <link rel="stylesheet" type="text/css" href="~/Content/SanPham.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/Prod_Details.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 }
 
