--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -27,14 +27,9 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark" style="background-color: red;">
         <div class="container">
-            @Html.ActionLink("CellPhoneS Admin", "Index", "Default", new { area = "Admin" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("CellPhoneS Admin", "Index", "Default", new { area = "Admin" }, new { @class = "navbar-brand" })         
 
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+            <div>
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Quản lý danh mục", "Index", "Categories", new { area = "Admin" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Quản lý sản phẩm", "Index", "Products", new { area = "Admin" }, new { @class = "nav-link" })</li>
