--- a/Views/Order/Shipping.cshtml
+++ b/Views/Order/Shipping.cshtml
@@ -46,7 +46,7 @@
         </div>
 
         <div style="margin-top: 20px;">
-            <button type="submit" class="btn btn-danger cart-button" style="width: 100%; padding: 10px; font-weight: bold;">
+            <button type="submit" class="btn btn-danger" style="width: 100%; padding: 10px; font-weight: bold;">
                 TIẾP TỤC ĐẾN THANH TOÁN
             </button>
         </div>
