--- a/Content/Layout.css
+++ b/Content/Layout.css
@@ -15,9 +15,9 @@ body, html {
     padding: 15px 15px; /* tăng padding trên dưới */
     margin: 0;
     min-height: 50px; /* đảm bảo header luôn cao tối thiểu */
-    gap: 40px;
+    gap: 30px;
     position: sticky;
-    width:100%;
+    max-width:100%;
 }
 .headercenter {
     margin: 0;
