--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,69 +10,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - CellphoneS</title>
     <link rel="stylesheet" href="~/Content/Layout.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
-            <a style="color:white; text-decoration:none;" href="@Url.Action("Index", "Home")">
-                <h2>Cellphone<strong>S</strong></h2>
-            </a>
+        <a style="color:white; text-decoration:none;" href="@Url.Action("Index", "Home")">
+            <h2>Cellphone<strong>S</strong></h2>
+        </a>
 
-            <form class="danhmuc">
-                <i class="fa-solid fa-list"></i>
-                <select onchange="location.href=this.value" class="danhmuc">
-                    <option value="dm">Danhmục </option>
-                    <option value="~/Home/Dienthoai">Điện thoại</option>
-                    <option value="~/Home/Laptop">Laptop</option>
-                    <option value="~/Home/AmThanh">Âm thanh</option>
-                </select>
+        <form class="danhmuc">
+            <i class="fa-solid fa-list"></i>
+            <select onchange="location.href=this.value" class="danhmuc">
+                <option value="dm">Danhmục </option>
+                <option value="~/Home/Dienthoai">Điện thoại</option>
+                <option value="~/Home/Laptop">Laptop</option>
+                <option value="~/Home/AmThanh">Âm thanh</option>
+            </select>
+        </form>
+
+        <form class="tinhthanh">
+            <i class="fa-solid fa-location-dot"></i>
+            <select class="tinhthanh">
+                <option value="">Hồ Chí Minh</option>
+                <option value="ha-noi">Hà Nội</option>
+                <option value="da-nang">Đà Nẵng</option>
+            </select>
+        </form>
+
+        @*phần tìm kiếm sản phẩm*@
+        <section>
+            <form class="searchform" action="@Url.Action("Index", "Home")" method="get">
+                <input type="text"
+                       name="SearchTerm"
+                       value="@Request.QueryString["SearchTerm"]"
+                       placeholder="Bạn muốn mua gì hôm nay?"
+                       style="border: none; outline: none; width: 100%; padding-left: 10px;">
+                <button type="submit"><i class="fa fa-search"></i></button>
             </form>
+        </section>
+        <a class="giohang" href="@Url.Action("Index", "Cart")">
+            Giỏ hàng <i class="fa-solid fa-cart-shopping"></i>
+        </a>
 
-            <form class="tinhthanh">
-                <i class="fa-solid fa-location-dot"></i>
-                <select class="tinhthanh">
-                    <option value="">Hồ Chí Minh</option>
-                    <option value="ha-noi">Hà Nội</option>
-                    <option value="da-nang">Đà Nẵng</option>
-                </select>
-            </form>
+        @if (Session["CustomerName"] != null)
+        {
+            // TRƯỜNG HỢP ĐÃ ĐĂNG NHẬP
+            <div class="user-info-header">
 
-            @*phần tìm kiếm sản phẩm*@
-            <section>
-                <form class="searchform" action="@Url.Action("Index", "Home")" method="get">
-                    <input type="text"
-                           name="SearchTerm"
-                           value="@Request.QueryString["SearchTerm"]"
-                           placeholder="Bạn muốn mua gì hôm nay?"
-                           style="border: none; outline: none; width: 100%; padding-left: 10px;">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </section>
-            <a class="giohang" href="@Url.Action("Index", "Cart")">
-                Giỏ hàng <i class="fa-solid fa-cart-shopping"></i>
-            </a>
-
-            @if (Session["CustomerName"] != null)
-            {
-                // TRƯỜNG HỢP ĐÃ ĐĂNG NHẬP
-                <div class="user-info-header">
-
-                    <a href="@Url.Action("Index", "Profile")">
-                        <span>Chào, <i class="fa-regular fa-user"></i>  <b>@Session["CustomerName"]</b></span>
-                    </a>
-                    <span>|</span>
-                    <a href="@Url.Action("OrderHistory", "Order")">Đơn hàng</a>
-                    <span>|</span>
-                    <a href="@Url.Action("Logout", "Account")"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất </a>
-                </div>
-            }
-            else
-            {
-                // TRƯỜNG HỢP CHƯA ĐĂNG NHẬP
-                <a class="dangnhap" href="@Url.Action("Login", "Account")">
-                    Đăng nhập <i class="fa-regular fa-user"></i>
+                <a href="@Url.Action("Index", "Profile")">
+                    <span>Chào, <i class="fa-regular fa-user"></i>  <b>@Session["CustomerName"]</b></span>
                 </a>
-            }
+                <span>|</span>
+                <a href="@Url.Action("OrderHistory", "Order")">Đơn hàng</a>
+                <span>|</span>
+                <a href="@Url.Action("Logout", "Account")"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất </a>
+            </div>
+        }
+        else
+        {
+            // TRƯỜNG HỢP CHƯA ĐĂNG NHẬP
+            <a class="dangnhap" href="@Url.Action("Login", "Account")">
+                Đăng nhập <i class="fa-regular fa-user"></i>
+            </a>
+        }
     </header>
 
     <main class="container">
@@ -137,5 +138,9 @@
             </div>
         </div>
     </footer>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
