--- a/Areas/Admin/Views/User/Index.cshtml
+++ b/Areas/Admin/Views/User/Index.cshtml
@@ -169,7 +169,7 @@
                             </td>
 
                             <td style="text-align: center;">
-                                <a href="@Url.Action("Edit", new { id = item.Username })" class="action-btn btn-edit" title="Đổi mật khẩu">
+                                <a href="@Url.Action("Edit", new { id = item.Username })" class="action-btn btn-edit" title="Cập nhập Admin">
                                     <i class="fa-solid fa-key"></i>
                                 </a>
 
